# pLisp

./: .gitignore  Makefile  Makefile.am  Makefile.windows  README  README.asciidoc  autogen.sh  build_windows_dist.sh  compiler.c  compiler.lisp  configure.ac  configure.in  deploy_win.sh  ffi.c  gmon.out  graph.lisp  hashtable.c  hashtable.h  images.c  json.h  json.lex  main.c  makewin.sh  math.lisp  matrix.lisp  memory.c  memory.h  native_compiler.c  pLisp_Language_Reference.html  pLisp_Language_Reference.odt  plisp.h  plisp.lang  plisp.lex  plisp.lisp  plisp.y  plisp_lib.lisp  plisp_utils_ffi.c  pos.lisp  queue.h  test_ffi.lisp  (+5 more)
data/: help.json  plisp.lang
doc/: help.html  help.json  pLisp_User_Manual.odt  tutorial.lisp
doc/old/: pLisp_Language_Reference.html
downloads/linux/: README  plisp_0.1-1_i386.deb  plisp_0.1.1-1_amd64.deb  plisp_0.1.1-1_i386.deb  plisp_0.1.10-1_amd64.deb  plisp_0.1.10-1_i386.deb  plisp_0.1.11-1_amd64.deb  plisp_0.1.11-1_i386.deb  plisp_0.1.12-1_amd64.deb  plisp_0.1.12-1_i386.deb  plisp_0.1.13-1_amd64.deb  plisp_0.1.13-1_i386.deb  plisp_0.1.14-1_amd64.deb  plisp_0.1.14-1_i386.deb  plisp_0.1.15-1_amd64.deb  plisp_0.1.15-1_i386.deb  plisp_0.1.16-1_amd64.deb  plisp_0.1.16-1_i386.deb  plisp_0.1.17-1_amd64.deb  plisp_0.1.17-1_i386.deb  plisp_0.1.18-1_amd64.deb  plisp_0.1.18-1_i386.deb  plisp_0.1.19-1_amd64.deb  plisp_0.1.19-1_i386.deb  plisp_0.1.2-1_amd64.deb  plisp_0.1.2-1_i386.deb  plisp_0.1.20-1_i386.deb  plisp_0.1.21-1_i386.deb  plisp_0.1.22-1_i386.deb  plisp_0.1.23-1_i386.deb  plisp_0.1.24-1_i386.deb  plisp_0.1.25-1_i386.deb  plisp_0.1.26-1_i386.deb  plisp_0.1.27-1_i386.deb  plisp_0.1.28-1_i386.deb  plisp_0.1.29-1_i386.deb  plisp_0.1.3-1_amd64.deb  plisp_0.1.3-1_i386.deb  plisp_0.1.4-1_amd64.deb  plisp_0.1.4-1_i386.deb  (+10 more)
downloads/windows/: README
gui/: event_handlers.c  ui.c
icons/: splash.pptx
lib/: experimental.lisp  graph.lisp  io.lisp  math.lisp  matrix.lisp  plisp.lisp  plisp_full_monty_compiler.lisp  plisp_full_monty_compiler_complete.lisp  plisp_full_monty_compiler_windows.lisp  pos.lisp  primitives.lisp  statistics.lisp  utils.lisp
osx_bundle/: Info-plisp.plist  plisp.bundle  plisp.icns
rb/: red_black_tree.c
scripts/: build_deb.sh  build_deb_amd64.sh  build_deb_i386.sh  build_osx_dmg.sh  build_osx_dmg_new.sh  build_windows_zip.sh  control  control_amd64  control_i386  readme.windows  replace_copyright_year.txt  steps_for_ver_release.txt
src/: compiler.c  ffi.c  full_monty_compiler.c  hashtable.c  hashtable.h  images.c  jit.c  jit.h  jit_llvm.cpp  json.c  json.h  json.l  json_parser.y  jsonlib.c  main.c  memory.c  memory.h  metacont.c  native_compiler.c  native_primitives.c  plisp.h  plisp.l  plisp.lex  plisp.y  plisp_config.c  plisp_graph_ffi.c  plisp_parser.y  plisp_utils_ffi.c  queue.c  queue.h  stack.c  stack.h  stepper.c  test_so.c  util.c  util.h  vm.c
src/gui/: event_handlers.c  file_browser.c  help.c  indent.c  object_inspector.c  stepper_gui.c  ui.c
src/old/: compiler_old.c  memory_old.c  native_compiler.c  vm.c
src/old/rb/: stack.h
tests/: run_test_cases.lisp  run_test_cases_windows.lisp  run_tests.sh  run_tests_windows.bat  test_ffi.lisp  unit_tests.lisp  unit_tests_full_monty_compiler.lisp  unit_tests_interpreter.lisp  unit_tests_windows.lisp
tools/: Makefile  docgen.c
tpl/: tpl.c
tutorials/plisp_bitcoin/: testlibcurl.c
windows_scripts/: build_windows_dist.sh  deploy_win.sh  makewin.sh  master.sh
